<resources>
    <string name="app_name">Quiz App</string>
    <string name="name">Please type your name here</string>
    <string name="question_one">Which Movie is the highest grossing film of all time?</string>
    <string name="question_two">Which Movie was the first Computer-animated Film?</string>
    <string name="question_three">In Which Movie Daniel Radcliffe is best known for his role?</string>
    <string name="question_four">Which Movies are not Steven Spielberg\'s films?</string>
    <string name="question_five">Which Movies didn\'t win an Oscar Award?</string>
    <string name="question_six">Which Person was the First African-American to win an Oscar?</string>
    <string name="question_seven">Which Movie belongs to the Image below?</string>
    <string name="question_eight">Which Titles of these Star Wars Films are Incorrect?</string>
    <string name="question_nine">Which Movie belongs to the Image below?</string>
    <string name="question_ten">Did the Movie Lion King have a Sequel?</string>
    <string name="question_one_response_a">Avatar</string>
    <string name="question_one_response_b">Titanic</string>
    <string name="question_one_response_c">Jurassic World</string>
    <string name="question_one_response_d">Avengers: Infinity Wars</string>
    <string name="question_one_response_e">Furious 7</string>
    <string name="question_one_response_f">Star Wars: The Force Awakens</string>
    <string name="question_two_response_a">Monster,Inc</string>
    <string name="question_two_response_b">Toy Story</string>
    <string name="question_two_response_c">A Bug\'s Life</string>
    <string name="question_two_response_d">Antz</string>
    <string name="question_two_response_e">Shrek</string>
    <string name="question_two_response_f">Ice Age</string>
    <string name="question_three_response_a">Kill Your Darlings</string>
    <string name="question_three_response_b">Now You See Me 2</string>
    <string name="question_three_response_c">The Woman in Black</string>
    <string name="question_three_response_d">Harry Potter</string>
    <string name="question_four_response_a">Jaws</string>
    <string name="question_four_response_b">Titanic</string>
    <string name="question_four_response_c">ET</string>
    <string name="question_four_response_d">Saving Private Ryan</string>
    <string name="question_four_response_e">Dancing with Wolves</string>
    <string name="question_four_response_f">Catch Me If You Can</string>
    <string name="question_five_response_a">The Shawshank Redemption</string>
    <string name="question_five_response_b">Life of Pi</string>
    <string name="question_five_response_c">Braveheart</string>
    <string name="question_five_response_d">Chicago</string>
    <string name="question_five_response_e">Dances with Wolves</string>
    <string name="question_five_response_f">The Good, the Bad and the Ugly</string>
    <string name="question_six_response_a">Denzel Washington</string>
    <string name="question_six_response_b">Morgan Freeman</string>
    <string name="question_six_response_c">Jamie Fox</string>
    <string name="question_six_response_d">Hattie McDaniel</string>
    <string name="question_six_response_e">Will Smith</string>
    <string name="question_six_response_f">Halle Berry</string>
    <string name="question_seven_response_a">The Wizard of Oz</string>
    <string name="question_seven_response_b">Gone with the Wind</string>
    <string name="question_seven_response_c">Life is Beautiful</string>
    <string name="question_seven_response_d">The Breakfast Club</string>
    <string name="question_eight_response_a">The Last Jedi</string>
    <string name="question_eight_response_b">Attack of the Clones</string>
    <string name="question_eight_response_c">The Jedis Strikes Back</string>
    <string name="question_eight_response_d">A New Hope</string>
    <string name="question_eight_response_e">The Phantom Thread</string>
    <string name="question_eight_response_f">Revenge of the Sith</string>
    <string name="question_nine_response_a">West Side Story</string>
    <string name="question_nine_response_b">Mamma Mia</string>
    <string name="question_nine_response_c">Footloose</string>
    <string name="question_nine_response_d">The Sound of Music</string>
    <string name="results">Results</string>
    <string name="reset">Reset</string>
    <string name="filling">Just to fill this space</string>
    <string name="winner">Congratulations! You are a Winner!!</string>
    <string name="loser">It seems you just lost. Better luck next time</string>
    <string name="score">Your Score is:</string>
    <string name="photo_description">An Image that goes below the question</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="intro">Movie Quiz</string>
    <string name="intro_2">How much do you think you know about movies? Test your knowledge with the quiz below</string>
    <string name="good_luck">Good Luck!</string>
</resources>