<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/question_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/question_one" />

        <CheckBox
            android:id="@+id/question_one_response_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/question_one_response_a"/>

        <TextView
            android:id="@+id/question_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/question_two" />

        <TextView
            android:id="@+id/question_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/question_three" />

        <TextView
            android:id="@+id/question_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/question_four" />

        <TextView
            android:id="@+id/question_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/question_five" />

        <TextView
            android:id="@+id/question_six"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/question_six" />

        <TextView
            android:id="@+id/question_seven"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/question_seven" />

        <TextView
            android:id="@+id/question_eight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/question_eight" />

        <TextView
            android:id="@+id/question_nine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/question_nine" />

        <TextView
            android:id="@+id/question_ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/question_ten" />





    </LinearLayout>

</ScrollView>